src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-159.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units incv=\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units incv="
        locs:
          directive: "#units"
        options:
          - INVALID:
              locs:
                option: incv
              option: FrontsightInclinationCorrection
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EMISSINGVALUE
    loc: ""
    message: Missing inclination
    severity: Error
