src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-16.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units order=uen\")"
---
items:
  - loc: "#units order=uen"
    locs:
      directive: "#units"
    options:
      - loc: order=uen
        locs:
          option: order
          order: uen
        option: RectilinearOrder
        order:
          - Elevation
          - Easting
          - Northing
    type: UnitsDirective
