src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-162.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units incv=-2\")"
---
items:
  - loc: "#units incv=-2"
    locs:
      directive: "#units"
    options:
      - correction:
          unit: Degrees
          value: -2
        loc: incv=-2
        locs:
          correction: "-2"
          option: incv
        option: FrontsightInclinationCorrection
    type: UnitsDirective
