src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-163.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units incv=-2.3\")"
---
items:
  - loc: "#units incv=-2.3"
    locs:
      directive: "#units"
    options:
      - correction:
          unit: Degrees
          value: -2.3
        loc: incv=-2.3
        locs:
          correction: "-2.3"
          option: incv
        option: FrontsightInclinationCorrection
    type: UnitsDirective
