src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-164.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units incv=-2q\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units incv=-2q"
        locs:
          directive: "#units"
        options:
          - INVALID:
              correction: "-2q"
              loc: incv=-2q
              locs:
                correction: "-2q"
                option: incv
              option: FrontsightInclinationCorrection
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EINVALIDINCLINATIONUNIT
    loc: q
    message: Invalid inclination unit
    severity: Error
