src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-165.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units incv=-2g\")"
---
items:
  - loc: "#units incv=-2g"
    locs:
      directive: "#units"
    options:
      - correction:
          unit: Grads
          value: -2
        loc: incv=-2g
        locs:
          correction: "-2g"
          option: incv
        option: FrontsightInclinationCorrection
    type: UnitsDirective
